# naskit

./: README.md  build.py  pyproject.toml  setup.py  tutorial.ipynb
.github/workflows/: python-package.yml
naskit/: __init__.py
naskit/algo/: ss_generation.py
naskit/containers/: nucleic_acid.py
naskit/containers/pdb/: __init__.py  pdbAtom.py  pdbContainer.py  pdbDraw.py  pdbMolecule.py  pdbResidue.py  pdb_ss_parsing.py
naskit/io/: __init__.py  _pdbRead.py  bna.py  bpseq.py  dotLines.py  pdb.py  pdbRead.py
naskit/utils/: math3d.py
tests/: test_adjacency.py  test_fragments.py  test_graph_editing.py  test_io_bpseq.py  test_levenshtein.py  test_metrics.py  test_parser.py  test_pdb_methods.py
tests/io/: test_io_DotFasta.py  test_io_PDB.py  test_io_bna.py
